time shift problem fix

--- a/src/plots.ipynb
+++ b/src/plots.ipynb
@@ -196,6 +196,9 @@
     "\n",
     "with open('/home/hubble/work/serenade/data/data_matteo_upto_september_25_2024_corrected.pkl', 'rb') as file:\n",
     "    data = pickle.load(file)\n",
+    "    \n",
+    "with open('/home/hubble/work/serenade/data/data_matteo_upto_september_25_2024_without_timeshift.pkl', 'rb') as file:\n",
+    "    data_wts = pickle.load(file)\n",
     "    "
    ]
   },
@@ -206,26 +209,96 @@
    "outputs": [],
    "source": [
     "\n",
-    "def plot_sensor_readings_v1(arranged_data_np, complete_days):\n",
+    "# def plot_sensor_readings_v1(arranged_data_np, complete_days):\n",
+    "#     # Create a heatmap using Plotly\n",
+    "#     fig = go.Figure(data=go.Heatmap(\n",
+    "#         z=arranged_data_np,\n",
+    "#         colorscale='Hot',  # You can change this to any other scale you prefer\n",
+    "#         colorbar=dict(title='Sensor Status'),\n",
+    "#     ))\n",
+    "\n",
+    "#     # Update layout to customize axes\n",
+    "#     fig.update_layout(\n",
+    "#         title='Sensor Readings as Image',\n",
+    "#         xaxis_title='Time of the Day (HH:MM)',\n",
+    "#         yaxis_title='Date',\n",
+    "#         xaxis=dict(\n",
+    "#             tickvals=np.arange(0, 1440, 60),  # Set tick values for the x-axis\n",
+    "#             ticktext=[f'{h:02d}:00' for h in range(24)],  # Create tick labels in HH:MM format\n",
+    "#         ),\n",
+    "#         yaxis=dict(\n",
+    "#             tickvals=np.arange(0, len(arranged_data_np), 10),  # Set tick values for the y-axis\n",
+    "#             ticktext=[str(complete_days[i]) for i in np.arange(0, len(arranged_data_np), 5)],  # Date labels\n",
+    "#         ),\n",
+    "#         height=600,\n",
+    "#         width=1000,\n",
+    "#     )\n",
+    "\n",
+    "#     # Show the figure\n",
+    "#     fig.show()\n",
+    "def arrange_data_by_day_numpy_environmentals_wts(df):  \n",
+    "    # Create a date range for complete days\n",
+    "    start_date = df['ts_on'].dt.date.min()\n",
+    "    end_date = df['ts_on'].dt.date.max()\n",
+    "    complete_days = pd.date_range(start=start_date, end=end_date, freq='D').date\n",
+    "    \n",
+    "    daily_data_list = []\n",
+    "    for d in range(len(complete_days)):\n",
+    "        # Filter data for the current day\n",
+    "        day = pd.Timestamp(complete_days[d]).tz_localize('Europe/Rome')\n",
+    "        daily_data = df[df['ts_on'].dt.tz_convert('Europe/Rome').dt.date == day.date()]\n",
+    "        # daily_data = df[df['ts_on'].dt.date == day]\n",
+    "        all_minutes = pd.date_range(start=day, end=day + pd.Timedelta(days=1) - pd.Timedelta(minutes=1), freq='min', tz='Europe/Rome')\n",
+    "        daily_resampled = np.zeros((1440,), dtype=int)  # 1440 minutes in a day\n",
+    "        \n",
+    "        if daily_data.empty:\n",
+    "            daily_data_list.append(daily_resampled) \n",
+    "            continue  \n",
+    "        for _, row in daily_data.iterrows():\n",
+    "            # print(a, row)\n",
+    "            start_minute = (row['ts_on'] - pd.Timestamp(day).tz_convert('Europe/Rome')).total_seconds() // 60\n",
+    "            end_minute =  (row['ts_off'] - pd.Timestamp(day).tz_convert('Europe/Rome')).total_seconds() // 60\n",
+    "\n",
+    "            start_minute = int(min(1439, max(0, start_minute)))  \n",
+    "            end_minute = int(min(1439, max(0, end_minute)))     \n",
+    "            \n",
+    "            if start_minute == end_minute:\n",
+    "                daily_resampled[int(start_minute)] = 1\n",
+    "            elif start_minute < end_minute:\n",
+    "                daily_resampled[int(start_minute):int(end_minute)] = 1  # Set the range to 1\n",
+    "        \n",
+    "        daily_data_list.append(daily_resampled)\n",
+    "\n",
+    "    arranged_data_np = np.array(daily_data_list)\n",
+    "    # plot_sensor_readings(arranged_data_np, complete_days)\n",
+    "    \n",
+    "    return arranged_data_np , complete_days\n",
+    "\n",
+    "def plot_sensor_readings(arranged_data_np, complete_days):\n",
     "    # Create a heatmap using Plotly\n",
     "    fig = go.Figure(data=go.Heatmap(\n",
     "        z=arranged_data_np,\n",
     "        colorscale='Hot',  # You can change this to any other scale you prefer\n",
-    "        colorbar=dict(title='Sensor Status'),\n",
+    "        colorbar=dict(title='Sensor Value/Status'),\n",
+    "        hovertemplate='<b>X:</b> %{x}<br>' +  # Time of the day\n",
+    "                      '<b>Y:</b> %{y}<br>' +  # Date\n",
+    "                      '<b>Sensor Value:</b> %{z}<br>' +  # Sensor value\n",
+    "                      '<extra></extra>',  # Remove the extra hover info\n",
     "    ))\n",
     "\n",
     "    # Update layout to customize axes\n",
     "    fig.update_layout(\n",
-    "        title='Sensor Readings as Image',\n",
+    "        title='',\n",
     "        xaxis_title='Time of the Day (HH:MM)',\n",
     "        yaxis_title='Date',\n",
     "        xaxis=dict(\n",
     "            tickvals=np.arange(0, 1440, 60),  # Set tick values for the x-axis\n",
     "            ticktext=[f'{h:02d}:00' for h in range(24)],  # Create tick labels in HH:MM format\n",
+    "            tickangle=-90\n",
     "        ),\n",
     "        yaxis=dict(\n",
     "            tickvals=np.arange(0, len(arranged_data_np), 10),  # Set tick values for the y-axis\n",
-    "            ticktext=[str(complete_days[i]) for i in np.arange(0, len(arranged_data_np), 5)],  # Date labels\n",
+    "            ticktext=[str(complete_days[i]) for i in np.arange(0, len(arranged_data_np), 10)],  # Date labels\n",
     "        ),\n",
     "        height=600,\n",
     "        width=1000,\n",
@@ -233,8 +306,7 @@
     "\n",
     "    # Show the figure\n",
     "    fig.show()\n",
-    "\n",
-    "\n",
+    "    return fig\n",
     "\n",
     "def arrange_data_by_day_numpy(df):\n",
     "    df['ts_datetime'] = pd.to_datetime(df['ts_datetime'])\n",
@@ -281,6 +353,9 @@
     "        for _, row in daily_data.iterrows():\n",
     "            start_minute = (row['ts_on'] - pd.Timestamp(day)).total_seconds() // 60\n",
     "            end_minute = (row['ts_off'] - pd.Timestamp(day)).total_seconds() // 60\n",
+    "\n",
+    "            start_minute = int(min(1439, max(0, start_minute)))  \n",
+    "            end_minute = int(min(1439, max(0, end_minute))) \n",
     "            \n",
     "            if start_minute == end_minute:\n",
     "                daily_resampled[int(start_minute)] = 1\n",
@@ -290,7 +365,7 @@
     "        daily_data_list.append(daily_resampled)\n",
     "\n",
     "    arranged_data_np = np.array(daily_data_list)\n",
-    "    plot_sensor_readings(arranged_data_np, complete_days)\n",
+    "    # plot_sensor_readings(arranged_data_np, complete_days)\n",
     "    \n",
     "    return arranged_data_np , complete_days\n"
    ]
@@ -301,41 +376,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def plot_sensor_readings(arranged_data_np, complete_days):\n",
-    "    # Create a heatmap using Plotly\n",
-    "    fig = go.Figure(data=go.Heatmap(\n",
-    "        z=arranged_data_np,\n",
-    "        colorscale='Hot',  # You can change this to any other scale you prefer\n",
-    "        colorbar=dict(title='Sensor Value/Status'),\n",
-    "        hovertemplate='<b>X:</b> %{x}<br>' +  # Time of the day\n",
-    "                      '<b>Y:</b> %{y}<br>' +  # Date\n",
-    "                      '<b>Sensor Value:</b> %{z}<br>' +  # Sensor value\n",
-    "                      '<extra></extra>',  # Remove the extra hover info\n",
-    "    ))\n",
-    "\n",
-    "    # Update layout to customize axes\n",
-    "    fig.update_layout(\n",
-    "        title='',\n",
-    "        xaxis_title='Time of the Day (HH:MM)',\n",
-    "        yaxis_title='Date',\n",
-    "        xaxis=dict(\n",
-    "            tickvals=np.arange(0, 1440, 60),  # Set tick values for the x-axis\n",
-    "            ticktext=[f'{h:02d}:00' for h in range(24)],  # Create tick labels in HH:MM format\n",
-    "            tickangle=-90\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            tickvals=np.arange(0, len(arranged_data_np), 10),  # Set tick values for the y-axis\n",
-    "            ticktext=[str(complete_days[i]) for i in np.arange(0, len(arranged_data_np), 10)],  # Date labels\n",
-    "        ),\n",
-    "        height=600,\n",
-    "        width=1000,\n",
-    "    )\n",
-    "\n",
-    "    # Show the figure\n",
-    "    fig.show()\n",
-    "\n"
+    "subject_name = 'subject_2'\n",
+    "print(data[subject_name].keys())\n",
+    "df = data_wts[subject_name]['MotionLivingroom'][1].copy()\n",
+    "arranged_np_data, complete_days = arrange_data_by_day_numpy_environmentals_wts(df)"
    ]
   },
   {
@@ -343,89 +387,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "subject_name = 'subject_3'\n",
-    "print(data[subject_name].keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Stove_Hum_Temp_temp'][0].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Stove_Hum_Temp_humidity'][0].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Shower_Hum_Temp_temp'][0].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Shower_Hum_Temp_humidity'][0].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subject_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Refrigerator'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Freezer'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionKitchen'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -434,201 +396,82 @@
    "outputs": [],
    "source": [
     "\n",
-    "df = data[subject_name]['FoodStorageKitchen'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Dishes_Glasses'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Microwave'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Medicines'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Printer'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionBedroom'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionPrimaryBathroom'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "# dring cloths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionSecondaryBathroom'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "# dring cloths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data['subject_3']['MotionLivingRoomSofa'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#dog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[s]['MotionLivingRoomTablet'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['HouseEntrance'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['FoodStorageLivingRoom'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#sliding door"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['CoffeMachine'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['PlugTvHall'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#sliding door"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['Medicines'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#sliding door"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionLivingRoomSofa'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#sliding door"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data[subject_name]['MotionLivingRoomTablet'][1].copy()\n",
-    "arranged_np_data = arrange_data_by_day_numpy_environmentals(df)\n",
-    "#sliding door"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "### Without time shift\n",
+    "def save_sensor_plots(subject_name, data_wts, output_path):\n",
+    "    # Create the output folder if it doesn't exist\n",
+    "    os.makedirs(output_path, exist_ok=True)\n",
     "\n",
-    "# Sample data\n",
-    "v1 = np.random.rand(24)  # One value for each hour (0 to 23)\n",
-    "v2 = np.sin(np.linspace(0, 24, 1440))  # Continuous data (minute-wise, 1440 points)\n",
+    "    # Get the subject's data dictionary\n",
+    "    subject_data = data_wts[subject_name]\n",
     "\n",
-    "# Create time axis\n",
-    "time_v1 = np.arange(24)  # Hourly time for v1\n",
-    "time_v2 = np.linspace(0, 24, len(v2))  # Continuous time for v2 (e.g., every minute)\n",
+    "    # Loop over each key in the subject's data\n",
+    "    for key in subject_data.keys():\n",
+    "        # Skip keys that contain \"shower\" or \"stove\"\n",
+    "        if 'shower' in key.lower() or 'stove' in key.lower():\n",
+    "            continue\n",
+    "        \n",
+    "        # Extract the DataFrame for the current sensor\n",
+    "        df = subject_data[key][1].copy()\n",
     "\n",
-    "# Plotting\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "        # Process the DataFrame to arrange data by day\n",
+    "        arranged_np_data, complete_days = arrange_data_by_day_numpy_environmentals_wts(df)\n",
     "\n",
-    "# Plot v1 (hourly data)\n",
-    "plt.plot(time_v1, v1, label='v1 (Hourly data)', marker='o', linestyle='-', color='blue')\n",
-    "\n"
+    "        # Call the plotting function\n",
+    "        fig = plot_sensor_readings(arranged_np_data, complete_days)\n",
+    "\n",
+    "        # Save the plot as a PNG file in the output folder\n",
+    "        image_path = os.path.join(output_path, f\"{key}.png\")\n",
+    "        fig.write_image(image_path)\n",
+    "\n",
+    "        print(f\"Saved plot for {key} at {image_path}\")\n",
+    "\n",
+    "subject_name = 'subject_1'\n",
+    "print(data[subject_name].keys())\n",
+    "output_path = '/home/hubble/work/serenade/src/Results/subject_1_without_timeshift'\n",
+    "save_sensor_plots(subject_name, data_wts, output_path)\n",
+    "arranged_np_data, complete_days = arrange_data_by_day_numpy_environmentals_wts(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def save_sensor_plots(subject_name, data_wts, output_path):\n",
+    "    # Create the output folder if it doesn't exist\n",
+    "    os.makedirs(output_path, exist_ok=True)\n",
+    "\n",
+    "    # Get the subject's data dictionary\n",
+    "    subject_data = data_wts[subject_name]\n",
+    "\n",
+    "    # Loop over each key in the subject's data\n",
+    "    for key in subject_data.keys():\n",
+    "        # Skip keys that contain \"shower\" or \"stove\"\n",
+    "        if 'shower' in key.lower() or 'stove' in key.lower():\n",
+    "            continue\n",
+    "        \n",
+    "        # Extract the DataFrame for the current sensor\n",
+    "        df = subject_data[key][1].copy()\n",
+    "\n",
+    "        # Process the DataFrame to arrange data by day\n",
+    "        arranged_np_data, complete_days = arrange_data_by_day_numpy_environmentals(df)\n",
+    "\n",
+    "        # Call the plotting function\n",
+    "        fig = plot_sensor_readings(arranged_np_data, complete_days)\n",
+    "\n",
+    "        # Save the plot as a PNG file in the output folder\n",
+    "        image_path = os.path.join(output_path, f\"{key}.png\")\n",
+    "        fig.write_image(image_path)\n",
+    "\n",
+    "        print(f\"Saved plot for {key} at {image_path}\")\n",
+    "\n",
+    "# Example usage\n",
+    "subject_name = 'subject_1'\n",
+    "output_path = '/home/hubble/work/serenade/src/Results/subject_1_with_timeshift'\n",
+    "save_sensor_plots(subject_name, data, output_path)\n"
    ]
   },
   {
